@startuml TherapeutWriteController

skinparam classAttributeIconSize 0

package org.springframework {
    package web.bind.annotation {
        interface "@RestController" as RestController
        interface "@RequestMapping" as RequestMapping
        interface "@PathVariable" as PathVariable
        interface "@RequestBody" as RequestBody
        interface "@ExceptionHandler" as ExceptionHandler
    }

    package http {
        class ResponseEntity<T>
        class ProblemDetail

        ResponseEntity .[hidden].> ProblemDetail
    }
}

package jakarta.servlet.http {
    interface HttpServletRequest
}

package java.util {
    interface Collection<T>
    class UUID

    UUID .up[hidden].> Collection
    Collection .up[hidden].> HttpServletRequest
}

package com.acme.therapeut {
    package service {
        class TherapeutWriteService << control >> << @Service >>

        class ConstraintViolationsException
        class EmailExistsException
    }

    package rest #DDDDDD {

        class TherapeutDTO <<entity>>

        class TherapeutWriteController << boundary >> << @RestController >> << @RequestMapping >> {
            + @PostMapping create(@RequestBody TherapeutDTO: TherapeutDTO, request: HttpServletRequest): ResponseEntity<Void>
            + @PutMapping update(@PathVariable id: UUID, @RequestBody TherapeutDTO: TherapeutDTO)
            + @ExceptionHandler onConstraintViolations(ex: ConstraintViolationsException, req: HttpServletRequest): ResponseEntity<ProblemDetail>
            + @ExceptionHandler onEmailExists(ex: EmailExistsException, req: HttpServletRequest): ResponseEntity<ProblemDetail>
        }

        TherapeutWriteController o-down-> "1" TherapeutWriteService : service
        TherapeutWriteController ..> TherapeutDTO
        TherapeutWriteController ..> ConstraintViolationsException
        TherapeutWriteController ..> EmailExistsException

        TherapeutWriteController .up.> ResponseEntity
        TherapeutWriteController .up.> ProblemDetail
        TherapeutWriteController .right.> HttpServletRequest

        TherapeutWriteController .up.> RestController
        TherapeutWriteController .up.> RequestMapping
        TherapeutWriteController .up.> PathVariable
        TherapeutWriteController .up.> RequestBody
        TherapeutWriteController .up.> ExceptionHandler

        TherapeutWriteController .right.> UUID
        TherapeutWriteController .right.> Collection

        PatchOperation .[hidden].> TherapeutWriteService
    }
}

hide empty members

@enduml
